# quazi_mk

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  prj.conf  qmk.cmake  readme.md
boards/arm/blu60/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  blu60.dts  blu60.h  blu60.yaml  blu60_defconfig  board.cmake  init.c  keymap.c
boards/arm/blu64/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  blu64.dts  blu64.yaml  blu64_defconfig  board.cmake  init.c  keymap.c
misc/: merge-qmk.sh
quantum/: CMakeLists.txt  config_common.h  led.c  matrix.h  quantum.c  quantum_keycodes.h  version.h
quazi/: CMakeLists.txt  main_stub.c  null.c  prj.conf
quazi/dts/bindings/: quazi,matrix.yaml
quazi/include/: ble.h  hid_descriptor.h  hid_leds.h  hog.h  idle.h  matrix_scan.h  profile.h  qmk_glue.h  quazi.h
quazi/qmk_glue/: bootloader.c  host_driver.c  keyboard.c  led_set.c  matrix.c  process_bluetooth.c  timer.c  wait.c
quazi/qmk_include/: _print.h  led_set.h  quazi_process_bluetooth.h
quazi/src/: ble.c  hid_leds.c  hog.c  idle.c  main.c  matrix.c  matrix_scan.c  profile.c  quazi.c  shell.c
tmk_core/: CMakeLists.txt
tmk_core/common/: matrix.h  wait.h
tmk_core/common/zephyr/: _print.h  _wait.h  printf.h
